# perplexity-clone-backend

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  todo.md
.idx/: dev.nix
alembic/: env.py
alembic/versions/: 001_add_jwt_token_fields_to_login_session.py  0725003b89aa_replaced_answer_and_query_tabels_with_.py  40410cd897af_added_api_key_table_and_updated_service_.py  6e1a23b02603_added_session_title_and_like_and_.py  7cc516bf5b60_add_user_role_enum.py  b89b4f59d675_made_few_changes.py  cc7acb66fa00_remove_jwt_toekn_table.py
docs/: LANGGRAPH_AGENT.md
examples/: agent_example.py
notebooks/: test_web_search_agent.ipynb
src/adapters/: __init__.py  embeddings.py  llm.py  storage.py  vector_store.py  web_scraper.py  web_search.py
src/controllers/: __init__.py  auth.py  message.py  profile.py  service_catalog.py  session.py  user_api_keys.py  user_settings.py
src/core/: agent.py  container.py  registry.py  settings.py
src/core/state/: agent_state.py
src/core/tools/: answer_tool.py  retriever_tool.py  web_scrape_tool.py  web_search_tool.py
src/database/: database.py
src/lib/: auth.py  enums.py  storage.py
src/models/: __init__.py  answer.py  login_session.py  message.py  model_memory.py  profile.py  query.py  service_catalog.py  session.py  sources.py  token.py  user.py  user_api_keys.py  user_service_credential.py  user_settings.py
src/routers/: admin.py  auth.py  profile.py  service_catalog.py  user_api_keys.py  user_settings.py
src/schemas/: auth.py  message.py  profile.py  service_catalog.py  session.py  user_api_keys.py  user_service_credential.py  user_settings.py
src/services/: app_state.py  dependencies.py  logger.py
src/services/embedding/: factory.py
src/services/llm/: factory.py
src/services/memory/: factory.py
src/services/vector_store/: factory.py
src/services/web_scraper/: base.py  crawl4ai.py  factory.py  firecrawl.py  scrape_do.py  scraper.py
src/services/web_search/: base.py  duckduckgo_search.py  exa_search.py  factory.py  google_search.py  serp_search.py  tavily_search.py
src/utils/: encryption.py  state.py  token.py
templates/: admin_dashboard.html  admin_login.html  admin_service_form.html  admin_services.html  admin_sessions.html  admin_users.html  base.html
tests/: test.py
