[project]
name = "perplexity-clone-app"
version = "0.1.0"
description = "FastAPI backend application for a Perplexity AI clone. Supports user authentication, question answering from various sources, real-time web search and crawling and session management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "authlib>=1.3.0",
    "bcrypt>=4.1.0",
    "boto3>=1.40.74",
    "crawl4ai>=0.7.7",
    "fastapi>=0.121.1",
    "langchain>=1.0.5",
    "langgraph>=1.0.2",
    "logfire[fastapi,httpx,requests,sqlalchemy,system-metrics]>=4.14.2",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.121.1",
    "pip-system-certs>=5.3",
]
